fix ticket prices alignment

--- a/Thaala/assets/css/style.css
+++ b/Thaala/assets/css/style.css
@@ -947,7 +947,7 @@ span {
   margin-top: -94px
 }
 .pricesDiv {
-  margin-left: 342px;
+  text-align: center;
 }
 #txt1{
 color: #0e0520;
